[package]
name = "lock"
version = "0.1.0"
authors = ["Nazım Can Altınova <nazim@canaltinova.com>"]
description = "Lock your system. Supports macOS, Linux, and Windows."
homepage = "https://github.com/canaltinova/lock-rs"
repository = "https://github.com/canaltinova/lock-rs"
license = "MIT"
build = "build.rs"

[lib]
name = "lock"
path = "src/lib.rs"

[[bin]]
name = "lock"
path = "src/main.rs"